--- a/.github/workflows/test-and-publish.yml
+++ b/.github/workflows/test-and-publish.yml
@@ -10,8 +10,7 @@ on:
 env:
   AZURE_WEBAPP_NAME: 'LuciasHotel'   # set this to your Web app name on Azure
   AZURE_WEBAPP_PACKAGE_PATH: './publish'       # set this to the path to your Web app project, defaults to the repository root
-  DOTNET_VERSION: '7.0'                   # set this to the dotnet version to use (e.g. '2.1.x', '3.1.x', '5.0.x')
-
+                    
 jobs:
   test-project: # kör tester när arbetet pushas till main
     runs-on: ubuntu-latest
@@ -22,7 +21,7 @@ jobs:
       - name: Setup .NET Core SDK
         uses: actions/setup-dotnet@v4.0.0
         with:
-          dotnet-version: '$({DOTNET_VERSION})'
+          dotnet-version: '7.0'
       
       - name: Cache dependencies #förbättrar exicution time
         uses: actions/cache@v4.0.0
@@ -56,7 +55,7 @@ jobs:
       - name: Setup .NET Core SDK
         uses: actions/setup-dotnet@v4.0.0
         with:
-          dotnet-version: '$({DOTNET_VERSION})'
+          dotnet-version: '7.0'
 
       - name: Cache dependencies
         uses: actions/cache@v4.0.0
