--- a/.github/workflows/test-and-publish.yml
+++ b/.github/workflows/test-and-publish.yml
@@ -74,7 +74,7 @@ jobs:
       - name: Deploy to Azure
         uses: Azure/webapps-deploy@v3.0.0
         with: 
-          app-name: $({env.AZURE_WEBAPP_NAME})
+          app-name: '$({env.AZURE_WEBAPP_NAME})'
           publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE  }}
           package: '$({env.AZURE_WEBAPP_PACKAGE_PATH})'
                    
