--- a/.github/workflows/test-and-publish.yml
+++ b/.github/workflows/test-and-publish.yml
@@ -8,7 +8,7 @@ on:
       - main
 
 env:
-  AZURE_WEBAPP_NAME: 'LuciasHotel'   # set this to your Web app name on Azure
+  AZURE_WEBAPP_NAME: LuciasHotel  # set this to your Web app name on Azure
   AZURE_WEBAPP_PACKAGE_PATH: './publish'       # set this to the path to your Web app project, defaults to the repository root
                     
 jobs:
@@ -74,7 +74,7 @@ jobs:
       - name: Deploy to Azure
         uses: Azure/webapps-deploy@v3.0.0
         with: 
-          app-name: '$({env.AZURE_WEBAPP_NAME})'
+          app-name: $({env.AZURE_WEBAPP_NAME})
           publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
           package: '$({env.AZURE_WEBAPP_PACKAGE_PATH})'
                    
