--- a/.github/workflows/test-and-publish.yml
+++ b/.github/workflows/test-and-publish.yml
@@ -12,7 +12,7 @@ env:
   AZURE_WEBAPP_PACKAGE_PATH: './publish'     # set this to the path to your Web app project, defaults to the repository root
                     
 jobs:
-  test-project: # kör tester när arbetet pushas till main
+  test-project: # run tests when a push is made to the main branch
     runs-on: ubuntu-latest
     steps:
       - name: Check out action
@@ -23,7 +23,7 @@ jobs:
         with:
           dotnet-version: '7.0'
       
-      - name: Cache dependencies #förbättrar exicution time
+      - name: Cache dependencies #improve execution time
         uses: actions/cache@v4.0.0
         with:
           path: ~/.nuget
@@ -41,7 +41,7 @@ jobs:
       - name: Print job complete
         run: echo "Test job complete at $(date)!"
 
-  publish-project: #Om testet fungerar
+  publish-project: #run if the test passes
     runs-on: ubuntu-latest
     needs: test-project
     steps:  
@@ -69,8 +69,9 @@ jobs:
       - name: Build
         run: dotnet build --configuration Release --no-restore
 
-      - name: Create publish files
+      - name: Create publish files to Azure
         run: dotnet publish --configuration Release --output '${{env.AZURE_WEBAPP_PACKAGE_PATH}}'
+      
       - name: Deploy to Azure
         uses: Azure/webapps-deploy@v3.0.0
         with: 
@@ -78,7 +79,7 @@ jobs:
           publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
           package: '${{env.AZURE_WEBAPP_PACKAGE_PATH}}'
                    
-  create-issue: #ifall testet inte fungerar
+  create-issue: #run if the tests dont pass
     runs-on: ubuntu-latest
     needs: test-project
     if: failure()
@@ -87,4 +88,3 @@ jobs:
         run: |
               echo "Test failed. . . "
               echo "Creating issue."
-    
