layered architecture done

--- a/TestdrivenHotel.Test/TestdrivenHotel.Test.csproj
+++ b/TestdrivenHotel.Test/TestdrivenHotel.Test.csproj
@@ -22,4 +22,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\TestDrivenHotel.Logic\TestDrivenHotel.Logic.csproj" />
+  </ItemGroup>
+
 </Project>
