--- a/TestdrivenHotel.UI/TestdrivenHotel.UI.csproj
+++ b/TestdrivenHotel.UI/TestdrivenHotel.UI.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
@@ -8,6 +8,10 @@
 
   <ItemGroup>
     <PackageReference Include="newtonsoft.json" Version="13.0.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\TestDrivenHotel.Logic\TestDrivenHotel.Logic.csproj" />
   </ItemGroup>
 
 </Project>
